Bug 150473 - Function description in "Functions" sidebar should have minimum height
Summary: Function description in "Functions" sidebar should have minimum height
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.7.2 release
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:7.5.0
Keywords:
: 126666 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-08-18 14:16 UTC by Rafael Lima
Modified: 2022-10-13 21:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the problem (228.27 KB, video/mp4)
2022-08-18 14:16 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-08-18 14:16:20 UTC
Created attachment 181856 [details]
Video showing the problem

In LO Calc open the "Functions" sidebar. Notice that the description at the bottom is resizable, but it can be resized so that it disappears.

See attached video for more information.

The description area should have a minimum size so that the user won't make it accidentally disappear.

Or at least the size should be restored when entering the sidebar again. This might be possible since restarting LO will restore the default height of the description area.

System info

Version: 7.3.5.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.5-0ubuntu0.22.04.1
Calc: threaded Jumbo

Also in

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: b707cd41c6ab9ba2b646d5a9aa8e187c620a82f2
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL
Comment 1 Ezinne 2022-08-19 07:17:22 UTC
Reproducible in:

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: a9d225df2f8772e21435523ca20df1ece37390e4
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: pt-BR (en_NG); UI: en-US
Calc: threaded
Comment 2 Roman Kuznetsov 2022-09-28 16:58:47 UTC
*** Bug 126666 has been marked as a duplicate of this bug. ***
Comment 3 Commit Notification 2022-10-13 20:32:21 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7fc96ad09520abea4833ed7410fd3a2d1b63d7b1

tdf#150473 Wrap text and set min size for Function description

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.