tdf#150473 Wrap text and set min size for Function description

This patch does the following changes to the Functions sidebar in Calc:

1) The function description now uses a TextView instead of a Label so that the text can now wrap. This is important because many descriptions are long and require more than a single line of text.

2) The minimum size of the description TextView is set to 6 lines of text. Because there's no easy way to set this minimum size (since it is inside a Slider control), then the following rule was applied.
- If the user resizes the slider to less than 6 rows (in this case, moves it down), the next time a new function is clicked the slider is positioned so that 6 lines of text become visible.
- Moving the slider up, thus giving more space to the description view is still allowed as prior to this patch.

Change-Id: I52dfa8bef52b645fdce379408e6b790f6e8e5dea
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140507
Tested-by: Jenkins
Tested-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>